@@ -1,6 +1,8 @@
 Changelog for mk-table-checksum and mk-checksum-filter:
 
+   * --empty-replicate-table did not work with replication filters (issue 982).
    * --replicate-check=0 did not skip the checksumming step (issue 1020).
+   * Database-qualified --replicate table was not enforced (issue 982).
    * Added --[no]check-replication-filters (issue 993).
    * Added --ignore-replication-filters (issue 993).
 
